# conclave

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  conclave  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUDIT.md  ENTERPRISE-READINESS.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  panels.tsx  types.ts  ui.tsx  useStream.ts
frontend/src/pages/: AgentCeptionPanel.tsx  BugFixerPanel.tsx  ConfigPanel.tsx  KnowledgePanel.tsx  LivePanel.tsx  ProfilesPanel.tsx  QuarantinePanel.tsx  TasksPanel.tsx
src/conclave/: __init__.py  bootstrap.py  main.py  runtime.py  util.py
src/conclave/agents/: __init__.py  personas.py
src/conclave/config/: __init__.py  models.py  resolver.py  schema.py
src/conclave/db/: __init__.py  database.py  models.py  planning_models.py  repositories.py
src/conclave/db/migrations/: __init__.py
src/conclave/engine/: __init__.py  baseline.py  bug_fixer.py  coverage_ingest.py  discovery.py  gate.py  gitio.py  hunter.py  level_router.py  memory.py  orchestrator.py  pipeline.py  region_scheduler.py  repro.py  repro_gate.py  runner.py  test_integrity.py  verdict.py  worktree.py
src/conclave/events/: __init__.py  bus.py  notifications.py  types.py
src/conclave/planning/: __init__.py  prompts.py  session.py
src/conclave/providers/: __init__.py  base.py  claude_cli.py  opencode_cli.py  profiles.py
src/conclave/repo_intel/: __init__.py  analyst.py  knowledge.py
src/conclave/verification/: __init__.py  quarantine.py
src/conclave/web/: __init__.py  api.py  app.py  deps.py  schemas.py  ws.py
src/conclave/web/static/: index.html
src/conclave/web/static/assets/: index-6gGNm3_w.js  index-BE0enSHO.js  index-BWBmZNvl.js  index-BbosxJaX.js  index-CNQL5lSN.css  index-CPQyOThY.js  index-CRC7jQjm.js  index-CWGpEffi.css  index-Cd_WYFaY.js  index-CsHQBLz4.css  index-DFwuInkq.css  index-DG7bFW6t.js  index-DGOlGzvS.css  index-DctK62wp.js  index-DeD6ALu7.css  index-DezweZId.js  index-GdtAwR4i.css  index-LJ0xTcnX.css  index-hlNp5yd9.css  index-mZILGX-4.js
tests/: conftest.py
tests/integration/: fake_provider.py  test_api.py  test_bug_fixer.py  test_e2e.py  test_orchestrator.py  test_origin_guard.py  test_planning_api.py  test_repro_gate.py  test_test_integrity_git.py  test_ws.py
tests/unit/: test_bug_fixer_consensus.py  test_claude_cli.py  test_config.py  test_coverage_ingest.py  test_db.py  test_discovery.py  test_engine_logic.py  test_events.py  test_gate.py  test_gitio.py  test_hunter.py  test_level_router.py  test_notifications.py  test_opencode_provider.py  test_planning_orchestrator.py  test_planning_session_hardening.py  test_profiles.py  test_region_scheduler.py  test_repo_intel.py  test_repro.py  test_repro_realpath_guard.py  test_reviewer_dispatch.py  test_runtime.py  test_test_integrity.py  test_verification.py
