[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conclave"
version = "0.1.0"
description = "Portable, web-driven autonomous AI coding team — attachable to any repo."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Oktay Karakiya" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
conclave = "conclave.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/conclave"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
# B008: FastAPI uses function calls in argument defaults (Depends).
# ASYNC230/240: small local pathlib/open in async is fine here — the workload is
# subprocess-bound (git/claude/tests), not high-concurrency file serving.
ignore = ["B008", "ASYNC230", "ASYNC240"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["conclave"]
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["aiosqlite.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error"]
