[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conclave"
version = "0.1.0"
description = "Portable, web-driven autonomous AI coding team — attachable to any repo."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Oktay Karakiya" }]
keywords = ["ai", "agents", "autonomous", "coding-agent", "claude", "code-review", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.7",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/oktaykarakiya/conclave"
Repository = "https://github.com/oktaykarakiya/conclave"
Issues = "https://github.com/oktaykarakiya/conclave/issues"

[project.scripts]
conclave = "conclave.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/conclave"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"
# Keep generated caches out of the repo root (one .cache/ dir, gitignored).
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
# B008: FastAPI uses function calls in argument defaults (Depends).
# ASYNC230/240: small local pathlib/open in async is fine here — the workload is
# subprocess-bound (git/claude/tests), not high-concurrency file serving.
ignore = ["B008", "ASYNC230", "ASYNC240"]

[tool.mypy]
python_version = "3.12"
strict = true
cache_dir = ".cache/mypy"
mypy_path = "src"
packages = ["conclave"]
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["aiosqlite.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
cache_dir = ".cache/pytest"
# Strict: every warning is an error, EXCEPT the known-benign asyncio GC race where a
# subprocess transport from a cancelled/torn-down background task is finalized after its
# event loop closes ("Exception ignored in BaseSubprocessTransport.__del__"). This only
# happens in tests (per-test loops close); the long-lived daemon never closes its loop.
filterwarnings = [
  "error",
  "ignore:Exception ignored:pytest.PytestUnraisableExceptionWarning",
]
